# WhatTheFee

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
polars-dynamic/: Cargo.toml
src/: main.rs  record.rs
