[package]
name = "wtf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bitcoin = "0.30.1"
bitcoincore-rest = "2.0.0"
chrono = "0.4.26"
clap = { version = "4.3.14", features = ["derive"] }
tokio = { version = "1.31.0", features = ["macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# https://robert.kra.hn/posts/2022-09-09-speeding-up-incremental-rust-compilation-with-dylibs/ 
polars = { version = "0.30.0", path = "polars-dynamic", package = "polars-dynamic" }
