[package]
name = "polars-dynamic"
version = "0.30.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.30.0", features = ["lazy", "parquet", "log", "round_series", "cum_agg", "arange", "horizontal_concat"] }

[lib]
crate-type = ["dylib"]
